k8s/kafka/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kafka-namespace
  labels:
    app: kafka-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-app
  template:
    metadata:
      labels:
        app: kafka-app
  spec:
    volumes:
    - name: kafka-storage
      persistentVolumeClaim:
        claimName: kafka-pvc
    containers:
    - name: kafka
      image: confluentinc/cp-kafka:latest
      ports:
        - containerPort: 9092
        - containerPort: 9093
      volumeMounts:
      - name: kafka-storage
        mountPath: /var/lib/kafka/data
      resources:
        requests:
          memory: "2Gi"
          cpu: "1"
        limits:
          memory: "4Gi"
          cpu: "2"
